deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osdf-manager-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osdf-manager-app
  template:
    metadata:
      labels:
        app: osdf-manager-app
    spec:
      containers:
      - name: osdf-manager-app
        image: jhiemstra/osdf-flask-app
        ports:
        - containerPort: 8000
