service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osdf-manager-app
spec:
  selector:
    app: osdf-manager-app
  ports:
  - name: http
    port: 8080
    targetPort: 8000
  type: NodePort
