network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: osdf-manager-app
spec:
  podSelector:
    matchLabels:
      app: osdf-manager-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: "traefik"
    ports:
    - protocol: TCP
      port: 8080 
  egress:
    - {}
